# rendy

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Taskfile.yml  conanfile.py
assets/: triangle.slang
modules/gfx/include/: instance.hpp  physical_device.hpp  renderer.hpp  utils.hpp
modules/gfx/src/: instance.cpp  physical_device.cpp  renderer.cpp
modules/graphics/: CMakeLists.txt
modules/graphics/include/: graphics_api.hpp
modules/graphics/include/core/: device.hpp  enums.hpp
modules/graphics/include/vulkan/: device.hpp  instance.hpp  physical_device.hpp  queue.hpp  renderer.hpp  utils.hpp
modules/graphics/src/vulkan/: device.cpp  instance.cpp  physical_device.cpp  queue.cpp  renderer.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/include/: instance.hpp  physical_device.hpp  renderer.hpp  utils.hpp
modules/renderer/src/: instance.cpp  physical_device.cpp  renderer.cpp
src/: CMakeLists.txt  main.cpp
